Fix mail compose editor not visible in mobile template

--- a/mail/templates/mobile/app.less
+++ b/mail/templates/mobile/app.less
@@ -171,6 +171,9 @@
 				border:none;
 				box-shadow: none;
 			}
+			.mailComposeBodySection, .mailComposeBodySection .mailComposeBody{
+				height: ~"calc(100% - 180px)";
+			}
 			.mailComposeHeaderSection > table {
 				padding: 0;
 				tr.mailComposeHeaders.subjectContainer td:first-child::after {
